First commited as before_49858_rev1